--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,6 +32,15 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
       
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.0
+      with:
+          # Artifact name
+          name: deploy
+          # A file, directory or wildcard pattern that describes what to upload
+          path: target/*.jar
+          # The desired behavior if no files are found using the provided path.
+
 
 
 
